# whoseportisitanyway

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  STACK-SETUP.md  build.rs  install.sh  justfile
.agents/skills/whoseportisitanyway/: SKILL.md
.agents/skills/whoseportisitanyway/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json  settings.local.json
.claude/homunculus/instincts/inherited/: whoseportisitanyway-instincts.yaml
.codex/: AGENTS.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
docs/: architecture.md  building-from-source.md
docs/superpowers/specs/: 2026-05-26-whosportisitanyway-design.md
site/: index.html  netlify.toml  page.css
site/ds/: colors_and_type.css  z19r.css
site/src/: App.jsx  Demo.jsx  FAQ.jsx  Features.jsx  Footer.jsx  Hero.jsx  Install.jsx  Nav.jsx
src/: docker.rs  lib.rs  main.rs  model.rs  run.rs
src/classifier/: assess.rs  collapse.rs  framework.rs  mod.rs  project.rs
src/cli/: list.rs  mod.rs  snapshot.rs  why.rs
src/config/: defaults.rs  mod.rs
src/scanner/: linux.rs  macos.rs  mod.rs
src/tui/: confirm.rs  detail.rs  keybindings.rs  mod.rs  style.rs  table.rs
