[package]
name = "whoseportisitanyway"
version = "0.1.0"
edition = "2021"
description = "Cross-platform TUI for discovering which ports are in use, who owns them, and what they're for"
license = "MIT"
categories = ["command-line-utilities", "network-programming"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "5"
nix = { version = "0.29", features = ["signal"] }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
