[package]
name = "whoseportisitanyway"
version = "1.1.1"
edition = "2021"
description = "Cross-platform TUI for discovering which ports are in use, who owns them, and what they're for"
license = "MIT"
repository = "https://github.com/z19r/whoseportisitanyway"
homepage = "https://github.com/z19r/whoseportisitanyway"
readme = "README.md"
keywords = ["ports", "tui", "networking", "monitoring", "terminal"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dirs = "6"
nix = { version = "0.31", features = ["signal"] }
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "1.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
